# skidsteer-firmware

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  btstack.cmake  sdkconfig.defaults  skidsteer-firmware.ino
.github/workflows/: build.yml
main/: CMakeLists.txt  Kconfig  app_main.c  idf_component.yml  my_platform.c  skid.c  skid.h  skid_leds.c  skid_motion.c  skid_power.c
skidsteer-firmware/: .gitignore
skidsteer-firmware/main/: CMakeLists.txt  app_main.c  idf_component.yml
skidsteer-firmware/src/: main.cpp
